added unfinished table

--- a/4wk/latex/report4.tex
+++ b/4wk/latex/report4.tex
@@ -149,6 +149,20 @@ function the mean and standard deviation is calculated and outputted.
 
 \section{Results}
 
+\noindent\begin{tabularx}{\textwidth}{p{.22\textwidth} p{.15\textwidth} p{.25\textwidth} p{.25\textwidth}}
+    Hashtag & Occurences & Average Sentiment & Standard Deviation \\
+    \hline
+    \#iranelection  & 32 &  &  \\
+    \#honduras      & 14 &  &  \\
+    \#forasarney    & 12 &  &  \\
+    \#tcot          & 10 &  &  \\
+    \#xixicoco      & 9  &  &  \\
+    \#xixicoc       & 9  &  &  \\
+    \#neda          & 9  &  &  \\
+    \#followadd     & 9  &  &  \\
+    \#140mafia      & 9  &  &  \\
+    \#spymaster     & 8  &  &  \\
+\end{tabularx}
 
 \section{Conclusion}
 
