--- a/4wk/latex/report4.tex
+++ b/4wk/latex/report4.tex
@@ -170,6 +170,12 @@ value.}
 
 \section{Conclusion}
 
+As can be seen in the graphs presented above, the speed-up is not that
+significant even when using eight nodes. This can be explained by the fact that
+many other tasks were running at the same time on the system while our program
+was running. Another explanation is the fact that our dataset is not large
+enough to get the maximum speed-up from hadoop.
+
 
 % =================================== REFERENCES ===================================
 
