--- a/4wk/latex/report4.tex
+++ b/4wk/latex/report4.tex
@@ -156,6 +156,11 @@ belonging to a certain tweet/hashtag.}
 
 \section{Results}
 
+In this section the results we found are presented. This includes the data we
+found when looking for the ten most popular hashtags and their average sentiment
+value and standard deviation, in addition to the speed up factor of the program
+when using multiple nodes compared to one node. \\
+
 \noindent\begin{tabularx}{\textwidth}{p{.22\textwidth} p{.15\textwidth} p{.25\textwidth} p{.25\textwidth}}
     Hashtag & Occurences & Average Sentiment & Standard Deviation \\
     \hline
@@ -173,6 +178,18 @@ belonging to a certain tweet/hashtag.}
 \captionof{table}{Top ten hashtags (from English tweets only) with their
     occurences, \\ \hspace{2cm} average sentiment value and standard deviation of the sentiment
 value.}
+
+\begin{center}
+    \includegraphics[width=\textwidth]{sentiment}
+\end{center}
+\captionof{figure}{The average sentiment value and standard deviation of the ten
+most popular hashtags in the dataset.}
+
+\begin{center}
+    \includegraphics[width=\textwidth]{speedup}
+\end{center}
+\captionof{figure}{Speed up factor of the program when running on multiple nodes
+compared to one node.}
 
 \section{Conclusion}
 
