--- a/5wk/latex/report5_1.tex
+++ b/5wk/latex/report5_1.tex
@@ -119,8 +119,12 @@ ALU's.
 
 \section{Method}
 
+The implementation of this program is fairly straightforward, we simply spread
+the amplitude points over the available ALU's, each of which will calculate the
+next value for that particular amplitude point.
 
 \section{Results}
+
 
 
 \section{Conclusion}
