--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -110,11 +110,11 @@
 A file system is the part of a computer system that manages long term storage of
 data.  The most common file system is a centralised file system. This type of
 file system is the one we usually find in a personal computer, here files are
-stored on a single disk at a single location.\\
-Another type of file system is the distributed file system, here files are
-stored on multiple disks that are not necessarily at the same location. These
-file systems are useful when multiple people need to share their data quickly
-and securely.\\
+stored on a single storage device at a single location.\\
+Another type of file system is the distributed file system, in these file
+systems data can be stored on multiple storage devices that also do not
+necessarily need to be at the same location. These file systems are useful when
+multiple people need to share their data quickly and securely.\\
 In this paper our aim is to find out what the trade-offs are exactly  when
 choosing a distributed file system over a centralised file system. We will do
 this by looking at various examples and comparing the properties of a
