--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -103,6 +103,10 @@
 \tableofcontents
 \clearpage
 
+
+
+
+
 % =================================== MAIN TEXT ===================================
 
 \section{Introduction}
@@ -121,8 +125,13 @@ this by looking at various examples and comparing the properties of a
 distributed file system to those of a centralised file system.
 
 \section{The Distributed file system}
+%Explain how a distributed file system works
 
+\section{Examples}
+\subsection{Example 1}
+\subsection{Example 2}
 
+\section{Trade-offs}
 
 \section{Conclusion}
 
