--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -109,6 +109,8 @@
 
 % =================================== MAIN TEXT ===================================
 
+\section{Abstract}
+
 \section{Introduction}
 
 A file system is the part of a computer system that manages long term storage of
