--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -124,18 +124,26 @@ multiple people need to share their data quickly and securely.\\
 In this paper our aim is to find out what the trade-offs are exactly  when
 choosing a distributed file system over a centralised file system. We will do
 this by looking at various examples and comparing the properties of a
-distributed file system to those of a centralised file system.
+distributed file system to those of a centralised file system.\\
 
-\section{The Distributed file system}
-%Explain how a distributed file system works
+In the next section we take a closer look at what a distributed file system is,
+and why it is useful. In the section thereafter we will look at a couple of
+examples of distributed file systems to see what trade-offs they have had to
+make. Then the most important trade-offs will be summarised and discussion in
+the last section of this paper.
+
+\section{The Distributed File System}
+In this section we take a more in depth look at what a distributed file system
+exactly is, and why it is useful. A distributed file system is a system of
+servers and clients (in some cases devices can be both server and client at the
+same time) where data is spread over multiple storage devices (servers) but can be
+accessed by clients as though it were on their own device.
 
 \section{Examples}
 \subsection{Example 1}
 \subsection{Example 2}
 
-\section{Trade-offs}
-
-\section{Conclusion}
+\section{Discussion}
 
 
 
