--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -127,17 +127,39 @@ this by looking at various examples and comparing the properties of a
 distributed file system to those of a centralised file system.\\
 
 In the next section we take a closer look at what a distributed file system is,
-and why it is useful. In the section thereafter we will look at a couple of
-examples of distributed file systems to see what trade-offs they have had to
-make. Then the most important trade-offs will be summarised and discussion in
-the last section of this paper.
+and why it is useful. Then we will discuss in short what the requirements are
+for a distributed file system to be effective and useful. In the section
+thereafter we will look at a couple of examples of distributed file systems to
+see what trade-offs they have had to make. Then the most important trade-offs
+will be summarised and discussion in the last section of this paper.
 
 \section{The Distributed File System}
 In this section we take a more in depth look at what a distributed file system
 exactly is, and why it is useful. A distributed file system is a system of
 servers and clients (in some cases devices can be both server and client at the
 same time) where data is spread over multiple storage devices (servers) but can be
-accessed by clients as though it were on their own device.
+accessed by clients as though it were on their own device. \cite{concepts} A
+distributed file system is particularly convenient in large corporations where
+employees each have their own account that they can use to log in to any computer
+at the office. The employees will want to access their files regardless of which
+computer they are logged in from. A distributed file system can make sure every
+employee will have access to their files as though the files were on the
+computer currently being used.
+
+\section{Requirements}
+Here we will discuss in short what the requirements are of a distributed file
+system in order for it to be effective. First of all a user must be able to
+access the files they are trying to access in a way that is no different
+accessing files on a centralised file system. Then a user must also be able to
+access their files located on the distributed file system from any machine
+within the system. \cite{concepts} Another very important requirement is of
+course the performance of the system. If a file system is too slow, it becomes
+impractical to use since every time a client requests access to a file they
+would have to wait for it. At the same time the file system also needs to be
+fault tolerant, this means that the system will not completely crash or shut
+down when a fault occurs. Instead it should either manage the fault, or continue
+functioning with reduced functionality until the fault is solved.
+\cite{concepts}
 
 \section{Examples}
 \subsection{Example 1}
@@ -149,8 +171,8 @@ accessed by clients as though it were on their own device.
 
 % =================================== REFERENCES ===================================
 
-%\clearpage
-%\bibliographystyle{unsrt}
-%\bibliography{bib}
+\clearpage
+\bibliographystyle{unsrt}
+\bibliography{bib}
 
 \end{document}
