Abstract added + section re-order

--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -2,7 +2,7 @@
     author  = "{Eliezer Levy and Abraham Silberschatz}",
     title   = "{Dstributed File Systems: Concepts and Examples}",
     journal = "{ACM Computer Surveys}",
-    volume  = "{22}",
+    volume  = "{Vol. 22}",
     year    = "{1990}",
 }
 
@@ -17,7 +17,7 @@
     author  = "{John H. Howard, Michael L. Kazar, Sherri G. Menees, David A. Nichols, M. Satyanarayanan, Robert N. Sidebotham and Michael J. West}",
     title   = "{Scale and Performance in a Distributed File System}",
     journal = "{ACM Transactions on Computer Systems}",
-    volume  = "{6}",
+    volume  = "{Vol. 6}",
     year    = "{1988}",
 }
 
