--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -32,10 +32,11 @@
 
 \fancypagestyle{firststyle}
 {
+    \vspace*{6cm}
     \fancyhf{}
     \renewcommand{\headrulewidth}{0pt}
     \chead{\includegraphics[width=7cm]{logoUvA}}
-    \rfoot{\small \textsc {Page \thepage\ of \pageref{LastPage}}}
+    %\rfoot{\small \textsc {Page \thepage\ of \pageref{LastPage}}}
 }
 
 \setlength{\topmargin}{-0.3in}
@@ -100,10 +101,9 @@
 % =================================== FRONT PAGE ===================================
 
 \clearpage
+\vspace*{0.5cm}
 \tableofcontents
 \clearpage
-
-
 
 
 
@@ -111,20 +111,31 @@
 
 \section{Abstract}
 
+A distributed file system is a client and server system where clients can access
+data located on the servers. The servers can be spread over multiple locations
+and should still provide reliable access to files. To do so there are a few
+requirements that need to be met: universality, performance and fault tolerance.
+In this paper our aim is to examine what trade-offs designers of distributed
+file systems made in order to make their file systems work. To do this we will
+discuss three example distributed file systems, LOCUS, Andrew and Ceph and look
+at how they met these requirements or whether they needed to compromise in some
+way. We will also compare the three to see how distributed file systems
+developed over the years.
+
 \section{Introduction}
 
 A file system is the part of a computer system that manages long term storage of
 data.  The most common file system is a centralised file system. This type of
 file system is the one we usually find in a personal computer, here files are
-stored on a single storage device at a single location.\\
-Another type of file system is the distributed file system, in these file
-systems data can be stored on multiple storage devices that also do not
-necessarily need to be at the same location. These file systems are useful when
-multiple people need to share their data quickly and securely.\\
-In this paper our aim is to find out what the trade-offs are exactly  when
-choosing a distributed file system over a centralised file system. We will do
-this by looking at various examples and comparing the properties of a
-distributed file system to those of a centralised file system.\\
+stored on a single storage device at a single location.\\ Another type of file
+system is the distributed file system, in these file systems data can be stored
+on multiple storage devices that also do not necessarily need to be at the same
+location. These file systems are useful when multiple people need to share their
+data quickly and securely.\\ In this paper our aim is to find out what the
+trade-offs are exactly  when choosing a distributed file system over a
+centralised file system. We will do this by looking at various examples and
+comparing the properties of a distributed file system to those of a centralised
+file system.\\
 
 In the next section we take a closer look at what a distributed file system is,
 and why it is useful. Then we will discuss in short what the requirements are
@@ -134,23 +145,25 @@ see what trade-offs they have had to make. Then the most important trade-offs
 will be summarised and discussion in the last section of this paper.
 
 \section{The Distributed File System}
+
 In this section we take a more in depth look at what a distributed file system
 exactly is, and why it is useful. A distributed file system is a system of
 servers and clients (in some cases devices can be both server and client at the
-same time) where data is spread over multiple storage devices (servers) but can be
-accessed by clients as though it were on their own device. \cite{concepts} A
+same time) where data is spread over multiple storage devices (servers) but can
+be accessed by clients as though it were on their own device. \cite{concepts} A
 distributed file system is particularly convenient in large corporations where
-employees each have their own account that they can use to log in to any computer
-at the office. The employees will want to access their files regardless of which
-computer they are logged in from. A distributed file system can make sure every
-employee will have access to their files as though the files were on the
-computer currently being used.
+employees each have their own account that they can use to log in to any
+computer at the office. The employees will want to access their files regardless
+of which computer they are logged in from. A distributed file system can make
+sure every employee will have access to their files as though the files were on
+the computer currently being used.
 
 \section{Requirements}
+
 Here we will discuss in short what the requirements are of a distributed file
 system in order for it to be effective. First of all a user must be able to
 access the files they are trying to access in a way that is no different
-accessing files on a centralised file system. Then a user must also be able to
+accessing files on a centralised file system. And a user must also be able to
 access their files located on the distributed file system from any machine
 within the system. \cite{concepts} Another very important requirement is of
 course the performance of the system. If a file system is too slow, it becomes
@@ -161,9 +174,15 @@ down when a fault occurs. Instead it should either manage the fault, or continue
 functioning with reduced functionality until the fault is solved.
 \cite{concepts}
 
-\section{Examples}
-\subsection{Example 1}
-\subsection{Example 2}
+\section{Distributed File System Examples}
+\subsection{LOCUS}
+
+
+\subsection{Andrew}
+
+
+\subsection{Ceph}
+
 
 \section{Discussion}
 
