small edit intro

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -133,9 +133,9 @@ on multiple storage devices that also do not necessarily need to be at the same
 location. These file systems are useful when multiple people need to share their
 data quickly and securely.\\ In this paper our aim is to find out what the
 trade-offs are exactly  when choosing a distributed file system over a
-centralised file system. We will do this by looking at various examples and
-comparing the properties of a distributed file system to those of a centralised
-file system.\\
+centralised file system. And also how distributed file systems developed over
+the years. We will do this by looking at three examples and comparing the
+properties of those to each other and to a centralised file system.\\
 
 In the next section we take a closer look at what a distributed file system is,
 and why it is useful. Then we will discuss in short what the requirements are
