LOCUS date and andrew Date

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -176,9 +176,13 @@ functioning with reduced functionality until the fault is solved.
 
 \section{Distributed File System Examples}
 \subsection{LOCUS}
-
+The LOCUS distributed file system was developed in the early 1980s.
 
 \subsection{Andrew}
+
+The distributed file system used by the Andrew distributed computing environment
+(hereafter referred to as simply Andrew) started development in 1983, just after
+the LOCUS file system was developed.
 
 
 \subsection{Ceph}
