--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -13,7 +13,7 @@
     year      = "{2006}",
 }
 
-@article{scale,
+@article{andrew,
     author  = "{John H. Howard, Michael L. Kazar, Sherri G. Menees, David A. Nichols, M. Satyanarayanan, Robert N. Sidebotham and Michael J. West}",
     title   = "{Scale and Performance in a Distributed File System}",
     journal = "{ACM Transactions on Computer Systems}",
