--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -162,8 +162,12 @@ functioning with reduced functionality until the fault is solved.
 \cite{concepts}
 
 \section{Examples}
-\subsection{Example 1}
-\subsection{Example 2}
+\subsection{Ceph}
+
+Ceph is a implementation of a distributed file system that eliminates allocation
+lists entirely. Instead, file data is striped onto predictably named objects,
+while a special-purpose data distribution function called CRUSH assigns
+objects to storage devices.  \subsection{Example 2}
 
 \section{Discussion}
 
