--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -1,36 +1,36 @@
 @article{concepts,
-    author  = "{Eliezer Levy and Abraham Silberschatz}",
-    title   = "{Dstributed File Systems: Concepts and Examples}",
-    journal = "{ACM Computer Surveys}",
-    volume  = "{Vol. 22}",
-    year    = "{1990}",
+    author  = {Eliezer Levy and Abraham Silberschatz},
+    title   = {Dstributed File Systems: Concepts and Examples},
+    journal = {ACM Computer Surveys},
+    volume  = {Vol. 22},
+    year    = {1990},
 }
 
 @inproceedings{ceph,
-    author    = "{Sage A. Weil, Scott A. Brandt, Ethan L. Miller, Darrell D. E. Long and Carlos Maltzahn}",
-    title     = "{Ceph: A Scalable High-Performance Distributed File System}",
-    booktitle = "{Proceedings of the 7th symposium on Operating systems design and implementation}",
-    year      = "{2006}",
+    author    = {Sage A. Weil, Scott A. Brandt, Ethan L. Miller, Darrell D. E. Long and Carlos Maltzahn},
+    title     = {Ceph: A Scalable High-Performance Distributed File System},
+    booktitle = {Proceedings of the 7th symposium on Operating systems design and implementation},
+    year      = {2006},
 }
 
 @article{andrew,
-    author  = "{John H. Howard, Michael L. Kazar, Sherri G. Menees, David A. Nichols, M. Satyanarayanan, Robert N. Sidebotham and Michael J. West}",
-    title   = "{Scale and Performance in a Distributed File System}",
-    journal = "{ACM Transactions on Computer Systems}",
-    volume  = "{Vol. 6}",
-    year    = "{1988}",
+    author  = {John H. Howard, Michael L. Kazar, Sherri G. Menees, David A. Nichols, M. Satyanarayanan, Robert N. Sidebotham and Michael J. West},
+    title   = {Scale and Performance in a Distributed File System},
+    journal = {ACM Transactions on Computer Systems},
+    volume  = {Vol. 6},
+    year    = {1988},
 }
 
 @inproceedings{gpfs,
-    author    = "{Frank Schmuck and Roger Haskin}",
-    title     = "{GPFS: A Shared-Disk File System for Large Computing Clusters}",
-    booktitle = "{Proceedings of the Conference on File and Storage Technologies}",
-    year      = "{2002}",
+    author    = {Frank Schmuck and Roger Haskin},
+    title     = {GPFS: A Shared-Disk File System for Large Computing Clusters},
+    booktitle = {Proceedings of the Conference on File and Storage Technologies},
+    year      = {2002},
 }
 
 @inproceedings{filesize,
-    author    = "{M. Satyanarayanan}",
-    title     = "{A Study of File Sizes and Functional Lifetimes}",
-    booktitle = "{SOSP '81 Proceedings of the eighth ACM symposium on Operating systems principles}",
-    year    = "{1981}",
+    author    = {M. Satyanarayanan},
+    title     = {A Study of File Sizes and Functional Lifetimes},
+    booktitle = {SOSP '81 Proceedings of the eighth ACM symposium on Operating systems principles},
+    year    = {1981},
 }
