--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -6,15 +6,17 @@
     year    = {1990},
 }
 
-@inproceedings{ceph,
-    author    = {Sage A. Weil, Scott A. Brandt, Ethan L. Miller, Darrell D. E. Long and Carlos Maltzahn},
-    title     = {Ceph: A Scalable High-Performance Distributed File System},
-    booktitle = {Proceedings of the 7th symposium on Operating systems design and implementation},
-    year      = {2006},
+@inproceedings{weil2006ceph,
+    title={Ceph: A scalable, high-performance distributed file system},
+    author={Weil, Sage A and Brandt, Scott A and Miller, Ethan L and Long, Darrell DE and Maltzahn, Carlos},
+    booktitle={Proceedings of the 7th symposium on Operating systems design and implementation},
+    pages={307--320},
+    year={2006},
+    organization={USENIX Association}
 }
 
 @article{andrew,
-    author  = {John H. Howard, Michael L. Kazar, Sherri G. Menees, David A. Nichols, M. Satyanarayanan, Robert N. Sidebotham and Michael J. West},
+    author  = {John H. Howard and Michael L. Kazar and Sherri G. Menees and David A. Nichols and M. Satyanarayanan and Robert N. Sidebotham and Michael J. West},
     title   = {Scale and Performance in a Distributed File System},
     journal = {ACM Transactions on Computer Systems},
     volume  = {Vol. 6},
