--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -176,7 +176,7 @@ functioning with reduced functionality until the fault is solved.
 
 \section{Ceph}
 
-The Ceph distributed file system \cite{ceph} was initially developed late 2007
+The Ceph distributed file system \cite{weil2006ceph} was initially developed late 2007
 Ceph is a implementation of a distributed file system that eliminates allocation
 lists entirely. Instead, file data is divided into objects, while a data
 distribution function called CRUSH assigns objects to storage devices. This way
